// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Not clause 🟥 ! 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {'(', '!', NOT, POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      1,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "!",
}
`;

exports[`Not clause 🟥 ! not 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {'(', '!', NOT, POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      5,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "! not",
}
`;

exports[`Not clause 🟥 not ! 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {'(', '!', NOT, POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      5,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "not !",
}
`;

exports[`Not clause 🟥 not 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {'(', '!', NOT, POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      3,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "not",
}
`;

exports[`Not clause 🟥 not issuetype =  1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {EMPTY, POSNUMBER, NEGNUMBER, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      16,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "clause": {
        "accept": [Function],
        "appendOperand": [Function],
        "clauseType": "terminal",
        "enterNode": [Function],
        "exitNode": [Function],
        "field": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            4,
            13,
          ],
          "properties": [],
          "text": "issuetype",
          "value": "issuetype",
        },
        "getChildren": [Function],
        "operand": undefined,
        "operator": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            14,
            15,
          ],
          "text": "=",
          "value": "=",
        },
        "parent": [Circular],
        "position": [
          4,
          15,
        ],
        "predicates": [],
        "remove": [Function],
        "replace": [Function],
        "setOperand": [Function],
        "setOperator": [Function],
        "type": "clause",
      },
      "clauseType": "not",
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          3,
        ],
        "value": "not",
      },
      "parent": [Circular],
      "position": [
        0,
        15,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not issuetype = ",
}
`;

exports[`Not clause 🟥 not issuetype = bug and 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {'(', '!', NOT, POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      23,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "clause": {
        "accept": [Function],
        "appendOperand": [Function],
        "clauseType": "terminal",
        "enterNode": [Function],
        "exitNode": [Function],
        "field": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            4,
            13,
          ],
          "properties": [],
          "text": "issuetype",
          "value": "issuetype",
        },
        "getChildren": [Function],
        "operand": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operandType": "value",
          "parent": [Circular],
          "position": [
            16,
            19,
          ],
          "text": "bug",
          "type": "operand",
          "value": "bug",
        },
        "operator": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            14,
            15,
          ],
          "text": "=",
          "value": "=",
        },
        "parent": [Circular],
        "position": [
          4,
          19,
        ],
        "predicates": [],
        "remove": [Function],
        "replace": [Function],
        "setOperand": [Function],
        "setOperator": [Function],
        "type": "clause",
      },
      "clauseType": "not",
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          3,
        ],
        "value": "not",
      },
      "parent": [Circular],
      "position": [
        0,
        19,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not issuetype = bug and",
}
`;

exports[`Not clause 🟥 not issuetype = bug or 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {'(', '!', NOT, POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      22,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "clause": {
        "accept": [Function],
        "appendOperand": [Function],
        "clauseType": "terminal",
        "enterNode": [Function],
        "exitNode": [Function],
        "field": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            4,
            13,
          ],
          "properties": [],
          "text": "issuetype",
          "value": "issuetype",
        },
        "getChildren": [Function],
        "operand": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operandType": "value",
          "parent": [Circular],
          "position": [
            16,
            19,
          ],
          "text": "bug",
          "type": "operand",
          "value": "bug",
        },
        "operator": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            14,
            15,
          ],
          "text": "=",
          "value": "=",
        },
        "parent": [Circular],
        "position": [
          4,
          19,
        ],
        "predicates": [],
        "remove": [Function],
        "replace": [Function],
        "setOperand": [Function],
        "setOperator": [Function],
        "type": "clause",
      },
      "clauseType": "not",
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          3,
        ],
        "value": "not",
      },
      "parent": [Circular],
      "position": [
        0,
        19,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not issuetype = bug or",
}
`;

exports[`Not clause 🟥 not issuetype 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {'<', '>', '>=', '<=', '=', '!=', '~', '!~', IN, IS, NOT, WAS, CHANGED}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      13,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "clause": {
        "accept": [Function],
        "appendOperand": [Function],
        "clauseType": "terminal",
        "enterNode": [Function],
        "exitNode": [Function],
        "field": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            4,
            13,
          ],
          "properties": [],
          "text": "issuetype",
          "value": "issuetype",
        },
        "getChildren": [Function],
        "operand": undefined,
        "operator": undefined,
        "parent": [Circular],
        "position": [
          4,
          13,
        ],
        "predicates": [],
        "remove": [Function],
        "replace": [Function],
        "setOperand": [Function],
        "setOperator": [Function],
        "type": "clause",
      },
      "clauseType": "not",
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          3,
        ],
        "value": "not",
      },
      "parent": [Circular],
      "position": [
        0,
        13,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not issuetype",
}
`;

exports[`Not clause 🟥 not not 1`] = `
{
  "errors": [
    [JQLSyntaxError: mismatched input '<EOF>' expecting {'(', '!', NOT, POSNUMBER, NEGNUMBER, CUSTOMFIELD, STRING, QUOTE_STRING, SQUOTE_STRING}],
  ],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      7,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": undefined,
  },
  "represents": "not not",
}
`;

exports[`Not clause 🟩 ! issuetype = bug 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      17,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "clause": {
        "accept": [Function],
        "appendOperand": [Function],
        "clauseType": "terminal",
        "enterNode": [Function],
        "exitNode": [Function],
        "field": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            2,
            11,
          ],
          "properties": [],
          "text": "issuetype",
          "value": "issuetype",
        },
        "getChildren": [Function],
        "operand": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operandType": "value",
          "parent": [Circular],
          "position": [
            14,
            17,
          ],
          "text": "bug",
          "type": "operand",
          "value": "bug",
        },
        "operator": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            12,
            13,
          ],
          "text": "=",
          "value": "=",
        },
        "parent": [Circular],
        "position": [
          2,
          17,
        ],
        "predicates": [],
        "remove": [Function],
        "replace": [Function],
        "setOperand": [Function],
        "setOperator": [Function],
        "type": "clause",
      },
      "clauseType": "not",
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          1,
        ],
        "value": "not",
      },
      "parent": [Circular],
      "position": [
        0,
        17,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "! issuetype = bug",
}
`;

exports[`Not clause 🟩 ! issuetype = bug and not issuetype = epic and (component = jql or label = jql) 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      79,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "appendClause": [Function],
      "clauseType": "compound",
      "clauses": [
        {
          "accept": [Function],
          "clause": {
            "accept": [Function],
            "appendOperand": [Function],
            "clauseType": "terminal",
            "enterNode": [Function],
            "exitNode": [Function],
            "field": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                2,
                11,
              ],
              "properties": [],
              "text": "issuetype",
              "value": "issuetype",
            },
            "getChildren": [Function],
            "operand": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "operandType": "value",
              "parent": [Circular],
              "position": [
                14,
                17,
              ],
              "text": "bug",
              "type": "operand",
              "value": "bug",
            },
            "operator": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                12,
                13,
              ],
              "text": "=",
              "value": "=",
            },
            "parent": [Circular],
            "position": [
              2,
              17,
            ],
            "predicates": [],
            "remove": [Function],
            "replace": [Function],
            "setOperand": [Function],
            "setOperator": [Function],
            "type": "clause",
          },
          "clauseType": "not",
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              0,
              1,
            ],
            "value": "not",
          },
          "parent": [Circular],
          "position": [
            0,
            17,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
        {
          "accept": [Function],
          "clause": {
            "accept": [Function],
            "appendOperand": [Function],
            "clauseType": "terminal",
            "enterNode": [Function],
            "exitNode": [Function],
            "field": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                26,
                35,
              ],
              "properties": [],
              "text": "issuetype",
              "value": "issuetype",
            },
            "getChildren": [Function],
            "operand": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "operandType": "value",
              "parent": [Circular],
              "position": [
                38,
                42,
              ],
              "text": "epic",
              "type": "operand",
              "value": "epic",
            },
            "operator": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                36,
                37,
              ],
              "text": "=",
              "value": "=",
            },
            "parent": [Circular],
            "position": [
              26,
              42,
            ],
            "predicates": [],
            "remove": [Function],
            "replace": [Function],
            "setOperand": [Function],
            "setOperator": [Function],
            "type": "clause",
          },
          "clauseType": "not",
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              22,
              25,
            ],
            "value": "not",
          },
          "parent": [Circular],
          "position": [
            22,
            42,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
        {
          "accept": [Function],
          "appendClause": [Function],
          "clauseType": "compound",
          "clauses": [
            {
              "accept": [Function],
              "appendOperand": [Function],
              "clauseType": "terminal",
              "enterNode": [Function],
              "exitNode": [Function],
              "field": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  48,
                  57,
                ],
                "properties": [],
                "text": "component",
                "value": "component",
              },
              "getChildren": [Function],
              "operand": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "operandType": "value",
                "parent": [Circular],
                "position": [
                  60,
                  63,
                ],
                "text": "jql",
                "type": "operand",
                "value": "jql",
              },
              "operator": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  58,
                  59,
                ],
                "text": "=",
                "value": "=",
              },
              "parent": [Circular],
              "position": [
                48,
                63,
              ],
              "predicates": [],
              "remove": [Function],
              "replace": [Function],
              "setOperand": [Function],
              "setOperator": [Function],
              "type": "clause",
            },
            {
              "accept": [Function],
              "appendOperand": [Function],
              "clauseType": "terminal",
              "enterNode": [Function],
              "exitNode": [Function],
              "field": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  67,
                  72,
                ],
                "properties": [],
                "text": "label",
                "value": "label",
              },
              "getChildren": [Function],
              "operand": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "operandType": "value",
                "parent": [Circular],
                "position": [
                  75,
                  78,
                ],
                "text": "jql",
                "type": "operand",
                "value": "jql",
              },
              "operator": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  73,
                  74,
                ],
                "text": "=",
                "value": "=",
              },
              "parent": [Circular],
              "position": [
                67,
                78,
              ],
              "predicates": [],
              "remove": [Function],
              "replace": [Function],
              "setOperand": [Function],
              "setOperator": [Function],
              "type": "clause",
            },
          ],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": null,
            "positions": [
              [
                64,
                66,
              ],
            ],
            "value": "or",
          },
          "parent": [Circular],
          "position": [
            48,
            78,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
      ],
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": null,
        "positions": [
          [
            18,
            21,
          ],
          [
            43,
            46,
          ],
        ],
        "value": "and",
      },
      "parent": [Circular],
      "position": [
        0,
        79,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "! issuetype = bug and not issuetype = epic and (component = jql or label = jql)",
}
`;

exports[`Not clause 🟩 issuetype = bug and not component = jql 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      39,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "appendClause": [Function],
      "clauseType": "compound",
      "clauses": [
        {
          "accept": [Function],
          "appendOperand": [Function],
          "clauseType": "terminal",
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              0,
              9,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "operand": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "operandType": "value",
            "parent": [Circular],
            "position": [
              12,
              15,
            ],
            "text": "bug",
            "type": "operand",
            "value": "bug",
          },
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              10,
              11,
            ],
            "text": "=",
            "value": "=",
          },
          "parent": [Circular],
          "position": [
            0,
            15,
          ],
          "predicates": [],
          "remove": [Function],
          "replace": [Function],
          "setOperand": [Function],
          "setOperator": [Function],
          "type": "clause",
        },
        {
          "accept": [Function],
          "clause": {
            "accept": [Function],
            "appendOperand": [Function],
            "clauseType": "terminal",
            "enterNode": [Function],
            "exitNode": [Function],
            "field": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                24,
                33,
              ],
              "properties": [],
              "text": "component",
              "value": "component",
            },
            "getChildren": [Function],
            "operand": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "operandType": "value",
              "parent": [Circular],
              "position": [
                36,
                39,
              ],
              "text": "jql",
              "type": "operand",
              "value": "jql",
            },
            "operator": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                34,
                35,
              ],
              "text": "=",
              "value": "=",
            },
            "parent": [Circular],
            "position": [
              24,
              39,
            ],
            "predicates": [],
            "remove": [Function],
            "replace": [Function],
            "setOperand": [Function],
            "setOperator": [Function],
            "type": "clause",
          },
          "clauseType": "not",
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              20,
              23,
            ],
            "value": "not",
          },
          "parent": [Circular],
          "position": [
            20,
            39,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
      ],
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": null,
        "positions": [
          [
            16,
            19,
          ],
        ],
        "value": "and",
      },
      "parent": [Circular],
      "position": [
        0,
        39,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "issuetype = bug and not component = jql",
}
`;

exports[`Not clause 🟩 issuetype = bug or not component = jql 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      38,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "appendClause": [Function],
      "clauseType": "compound",
      "clauses": [
        {
          "accept": [Function],
          "appendOperand": [Function],
          "clauseType": "terminal",
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              0,
              9,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "operand": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "operandType": "value",
            "parent": [Circular],
            "position": [
              12,
              15,
            ],
            "text": "bug",
            "type": "operand",
            "value": "bug",
          },
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              10,
              11,
            ],
            "text": "=",
            "value": "=",
          },
          "parent": [Circular],
          "position": [
            0,
            15,
          ],
          "predicates": [],
          "remove": [Function],
          "replace": [Function],
          "setOperand": [Function],
          "setOperator": [Function],
          "type": "clause",
        },
        {
          "accept": [Function],
          "clause": {
            "accept": [Function],
            "appendOperand": [Function],
            "clauseType": "terminal",
            "enterNode": [Function],
            "exitNode": [Function],
            "field": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                23,
                32,
              ],
              "properties": [],
              "text": "component",
              "value": "component",
            },
            "getChildren": [Function],
            "operand": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "operandType": "value",
              "parent": [Circular],
              "position": [
                35,
                38,
              ],
              "text": "jql",
              "type": "operand",
              "value": "jql",
            },
            "operator": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                33,
                34,
              ],
              "text": "=",
              "value": "=",
            },
            "parent": [Circular],
            "position": [
              23,
              38,
            ],
            "predicates": [],
            "remove": [Function],
            "replace": [Function],
            "setOperand": [Function],
            "setOperator": [Function],
            "type": "clause",
          },
          "clauseType": "not",
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              19,
              22,
            ],
            "value": "not",
          },
          "parent": [Circular],
          "position": [
            19,
            38,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
      ],
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": null,
        "positions": [
          [
            16,
            18,
          ],
        ],
        "value": "or",
      },
      "parent": [Circular],
      "position": [
        0,
        38,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "issuetype = bug or not component = jql",
}
`;

exports[`Not clause 🟩 not ! issuetype = bug 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      21,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "clause": {
        "accept": [Function],
        "clause": {
          "accept": [Function],
          "appendOperand": [Function],
          "clauseType": "terminal",
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              6,
              15,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "operand": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "operandType": "value",
            "parent": [Circular],
            "position": [
              18,
              21,
            ],
            "text": "bug",
            "type": "operand",
            "value": "bug",
          },
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              16,
              17,
            ],
            "text": "=",
            "value": "=",
          },
          "parent": [Circular],
          "position": [
            6,
            21,
          ],
          "predicates": [],
          "remove": [Function],
          "replace": [Function],
          "setOperand": [Function],
          "setOperator": [Function],
          "type": "clause",
        },
        "clauseType": "not",
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "operator": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            4,
            5,
          ],
          "value": "not",
        },
        "parent": [Circular],
        "position": [
          4,
          21,
        ],
        "remove": [Function],
        "removeClause": [Function],
        "replace": [Function],
        "replaceClause": [Function],
        "type": "clause",
      },
      "clauseType": "not",
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          3,
        ],
        "value": "not",
      },
      "parent": [Circular],
      "position": [
        0,
        21,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not ! issuetype = bug",
}
`;

exports[`Not clause 🟩 not issuetype = bug 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      19,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "clause": {
        "accept": [Function],
        "appendOperand": [Function],
        "clauseType": "terminal",
        "enterNode": [Function],
        "exitNode": [Function],
        "field": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            4,
            13,
          ],
          "properties": [],
          "text": "issuetype",
          "value": "issuetype",
        },
        "getChildren": [Function],
        "operand": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operandType": "value",
          "parent": [Circular],
          "position": [
            16,
            19,
          ],
          "text": "bug",
          "type": "operand",
          "value": "bug",
        },
        "operator": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            14,
            15,
          ],
          "text": "=",
          "value": "=",
        },
        "parent": [Circular],
        "position": [
          4,
          19,
        ],
        "predicates": [],
        "remove": [Function],
        "replace": [Function],
        "setOperand": [Function],
        "setOperator": [Function],
        "type": "clause",
      },
      "clauseType": "not",
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          3,
        ],
        "value": "not",
      },
      "parent": [Circular],
      "position": [
        0,
        19,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not issuetype = bug",
}
`;

exports[`Not clause 🟩 not issuetype = bug and (component = jql or label = jql) 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      56,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "appendClause": [Function],
      "clauseType": "compound",
      "clauses": [
        {
          "accept": [Function],
          "clause": {
            "accept": [Function],
            "appendOperand": [Function],
            "clauseType": "terminal",
            "enterNode": [Function],
            "exitNode": [Function],
            "field": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                4,
                13,
              ],
              "properties": [],
              "text": "issuetype",
              "value": "issuetype",
            },
            "getChildren": [Function],
            "operand": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "operandType": "value",
              "parent": [Circular],
              "position": [
                16,
                19,
              ],
              "text": "bug",
              "type": "operand",
              "value": "bug",
            },
            "operator": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                14,
                15,
              ],
              "text": "=",
              "value": "=",
            },
            "parent": [Circular],
            "position": [
              4,
              19,
            ],
            "predicates": [],
            "remove": [Function],
            "replace": [Function],
            "setOperand": [Function],
            "setOperator": [Function],
            "type": "clause",
          },
          "clauseType": "not",
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              0,
              3,
            ],
            "value": "not",
          },
          "parent": [Circular],
          "position": [
            0,
            19,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
        {
          "accept": [Function],
          "appendClause": [Function],
          "clauseType": "compound",
          "clauses": [
            {
              "accept": [Function],
              "appendOperand": [Function],
              "clauseType": "terminal",
              "enterNode": [Function],
              "exitNode": [Function],
              "field": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  25,
                  34,
                ],
                "properties": [],
                "text": "component",
                "value": "component",
              },
              "getChildren": [Function],
              "operand": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "operandType": "value",
                "parent": [Circular],
                "position": [
                  37,
                  40,
                ],
                "text": "jql",
                "type": "operand",
                "value": "jql",
              },
              "operator": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  35,
                  36,
                ],
                "text": "=",
                "value": "=",
              },
              "parent": [Circular],
              "position": [
                25,
                40,
              ],
              "predicates": [],
              "remove": [Function],
              "replace": [Function],
              "setOperand": [Function],
              "setOperator": [Function],
              "type": "clause",
            },
            {
              "accept": [Function],
              "appendOperand": [Function],
              "clauseType": "terminal",
              "enterNode": [Function],
              "exitNode": [Function],
              "field": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  44,
                  49,
                ],
                "properties": [],
                "text": "label",
                "value": "label",
              },
              "getChildren": [Function],
              "operand": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "operandType": "value",
                "parent": [Circular],
                "position": [
                  52,
                  55,
                ],
                "text": "jql",
                "type": "operand",
                "value": "jql",
              },
              "operator": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  50,
                  51,
                ],
                "text": "=",
                "value": "=",
              },
              "parent": [Circular],
              "position": [
                44,
                55,
              ],
              "predicates": [],
              "remove": [Function],
              "replace": [Function],
              "setOperand": [Function],
              "setOperator": [Function],
              "type": "clause",
            },
          ],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": null,
            "positions": [
              [
                41,
                43,
              ],
            ],
            "value": "or",
          },
          "parent": [Circular],
          "position": [
            25,
            55,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
      ],
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": null,
        "positions": [
          [
            20,
            23,
          ],
        ],
        "value": "and",
      },
      "parent": [Circular],
      "position": [
        0,
        56,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not issuetype = bug and (component = jql or label = jql)",
}
`;

exports[`Not clause 🟩 not issuetype = bug and component = jql or label = jql 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      54,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "appendClause": [Function],
      "clauseType": "compound",
      "clauses": [
        {
          "accept": [Function],
          "appendClause": [Function],
          "clauseType": "compound",
          "clauses": [
            {
              "accept": [Function],
              "clause": {
                "accept": [Function],
                "appendOperand": [Function],
                "clauseType": "terminal",
                "enterNode": [Function],
                "exitNode": [Function],
                "field": {
                  "accept": [Function],
                  "enterNode": [Function],
                  "exitNode": [Function],
                  "getChildren": [Function],
                  "parent": [Circular],
                  "position": [
                    4,
                    13,
                  ],
                  "properties": [],
                  "text": "issuetype",
                  "value": "issuetype",
                },
                "getChildren": [Function],
                "operand": {
                  "accept": [Function],
                  "enterNode": [Function],
                  "exitNode": [Function],
                  "getChildren": [Function],
                  "operandType": "value",
                  "parent": [Circular],
                  "position": [
                    16,
                    19,
                  ],
                  "text": "bug",
                  "type": "operand",
                  "value": "bug",
                },
                "operator": {
                  "accept": [Function],
                  "enterNode": [Function],
                  "exitNode": [Function],
                  "getChildren": [Function],
                  "parent": [Circular],
                  "position": [
                    14,
                    15,
                  ],
                  "text": "=",
                  "value": "=",
                },
                "parent": [Circular],
                "position": [
                  4,
                  19,
                ],
                "predicates": [],
                "remove": [Function],
                "replace": [Function],
                "setOperand": [Function],
                "setOperator": [Function],
                "type": "clause",
              },
              "clauseType": "not",
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "operator": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  0,
                  3,
                ],
                "value": "not",
              },
              "parent": [Circular],
              "position": [
                0,
                19,
              ],
              "remove": [Function],
              "removeClause": [Function],
              "replace": [Function],
              "replaceClause": [Function],
              "type": "clause",
            },
            {
              "accept": [Function],
              "appendOperand": [Function],
              "clauseType": "terminal",
              "enterNode": [Function],
              "exitNode": [Function],
              "field": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  24,
                  33,
                ],
                "properties": [],
                "text": "component",
                "value": "component",
              },
              "getChildren": [Function],
              "operand": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "operandType": "value",
                "parent": [Circular],
                "position": [
                  36,
                  39,
                ],
                "text": "jql",
                "type": "operand",
                "value": "jql",
              },
              "operator": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  34,
                  35,
                ],
                "text": "=",
                "value": "=",
              },
              "parent": [Circular],
              "position": [
                24,
                39,
              ],
              "predicates": [],
              "remove": [Function],
              "replace": [Function],
              "setOperand": [Function],
              "setOperator": [Function],
              "type": "clause",
            },
          ],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": null,
            "positions": [
              [
                20,
                23,
              ],
            ],
            "value": "and",
          },
          "parent": [Circular],
          "position": [
            0,
            39,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
        {
          "accept": [Function],
          "appendOperand": [Function],
          "clauseType": "terminal",
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              43,
              48,
            ],
            "properties": [],
            "text": "label",
            "value": "label",
          },
          "getChildren": [Function],
          "operand": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "operandType": "value",
            "parent": [Circular],
            "position": [
              51,
              54,
            ],
            "text": "jql",
            "type": "operand",
            "value": "jql",
          },
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              49,
              50,
            ],
            "text": "=",
            "value": "=",
          },
          "parent": [Circular],
          "position": [
            43,
            54,
          ],
          "predicates": [],
          "remove": [Function],
          "replace": [Function],
          "setOperand": [Function],
          "setOperator": [Function],
          "type": "clause",
        },
      ],
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": null,
        "positions": [
          [
            40,
            42,
          ],
        ],
        "value": "or",
      },
      "parent": [Circular],
      "position": [
        0,
        54,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not issuetype = bug and component = jql or label = jql",
}
`;

exports[`Not clause 🟩 not issuetype = bug or component = jql and label = jql 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      54,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "appendClause": [Function],
      "clauseType": "compound",
      "clauses": [
        {
          "accept": [Function],
          "clause": {
            "accept": [Function],
            "appendOperand": [Function],
            "clauseType": "terminal",
            "enterNode": [Function],
            "exitNode": [Function],
            "field": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                4,
                13,
              ],
              "properties": [],
              "text": "issuetype",
              "value": "issuetype",
            },
            "getChildren": [Function],
            "operand": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "operandType": "value",
              "parent": [Circular],
              "position": [
                16,
                19,
              ],
              "text": "bug",
              "type": "operand",
              "value": "bug",
            },
            "operator": {
              "accept": [Function],
              "enterNode": [Function],
              "exitNode": [Function],
              "getChildren": [Function],
              "parent": [Circular],
              "position": [
                14,
                15,
              ],
              "text": "=",
              "value": "=",
            },
            "parent": [Circular],
            "position": [
              4,
              19,
            ],
            "predicates": [],
            "remove": [Function],
            "replace": [Function],
            "setOperand": [Function],
            "setOperator": [Function],
            "type": "clause",
          },
          "clauseType": "not",
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              0,
              3,
            ],
            "value": "not",
          },
          "parent": [Circular],
          "position": [
            0,
            19,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
        {
          "accept": [Function],
          "appendClause": [Function],
          "clauseType": "compound",
          "clauses": [
            {
              "accept": [Function],
              "appendOperand": [Function],
              "clauseType": "terminal",
              "enterNode": [Function],
              "exitNode": [Function],
              "field": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  23,
                  32,
                ],
                "properties": [],
                "text": "component",
                "value": "component",
              },
              "getChildren": [Function],
              "operand": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "operandType": "value",
                "parent": [Circular],
                "position": [
                  35,
                  38,
                ],
                "text": "jql",
                "type": "operand",
                "value": "jql",
              },
              "operator": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  33,
                  34,
                ],
                "text": "=",
                "value": "=",
              },
              "parent": [Circular],
              "position": [
                23,
                38,
              ],
              "predicates": [],
              "remove": [Function],
              "replace": [Function],
              "setOperand": [Function],
              "setOperator": [Function],
              "type": "clause",
            },
            {
              "accept": [Function],
              "appendOperand": [Function],
              "clauseType": "terminal",
              "enterNode": [Function],
              "exitNode": [Function],
              "field": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  43,
                  48,
                ],
                "properties": [],
                "text": "label",
                "value": "label",
              },
              "getChildren": [Function],
              "operand": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "operandType": "value",
                "parent": [Circular],
                "position": [
                  51,
                  54,
                ],
                "text": "jql",
                "type": "operand",
                "value": "jql",
              },
              "operator": {
                "accept": [Function],
                "enterNode": [Function],
                "exitNode": [Function],
                "getChildren": [Function],
                "parent": [Circular],
                "position": [
                  49,
                  50,
                ],
                "text": "=",
                "value": "=",
              },
              "parent": [Circular],
              "position": [
                43,
                54,
              ],
              "predicates": [],
              "remove": [Function],
              "replace": [Function],
              "setOperand": [Function],
              "setOperator": [Function],
              "type": "clause",
            },
          ],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": null,
            "positions": [
              [
                39,
                42,
              ],
            ],
            "value": "and",
          },
          "parent": [Circular],
          "position": [
            23,
            54,
          ],
          "remove": [Function],
          "removeClause": [Function],
          "replace": [Function],
          "replaceClause": [Function],
          "type": "clause",
        },
      ],
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": null,
        "positions": [
          [
            20,
            22,
          ],
        ],
        "value": "or",
      },
      "parent": [Circular],
      "position": [
        0,
        54,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not issuetype = bug or component = jql and label = jql",
}
`;

exports[`Not clause 🟩 not not issuetype = bug 1`] = `
{
  "errors": [],
  "query": {
    "accept": [Function],
    "appendClause": [Function],
    "enterNode": [Function],
    "exitNode": [Function],
    "getChildren": [Function],
    "orderBy": undefined,
    "parent": null,
    "position": [
      0,
      23,
    ],
    "prependOrderField": [Function],
    "removeClause": [Function],
    "removeOrderBy": [Function],
    "replaceClause": [Function],
    "replaceOrderBy": [Function],
    "setOrderDirection": [Function],
    "type": "query",
    "where": {
      "accept": [Function],
      "clause": {
        "accept": [Function],
        "clause": {
          "accept": [Function],
          "appendOperand": [Function],
          "clauseType": "terminal",
          "enterNode": [Function],
          "exitNode": [Function],
          "field": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              8,
              17,
            ],
            "properties": [],
            "text": "issuetype",
            "value": "issuetype",
          },
          "getChildren": [Function],
          "operand": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "operandType": "value",
            "parent": [Circular],
            "position": [
              20,
              23,
            ],
            "text": "bug",
            "type": "operand",
            "value": "bug",
          },
          "operator": {
            "accept": [Function],
            "enterNode": [Function],
            "exitNode": [Function],
            "getChildren": [Function],
            "parent": [Circular],
            "position": [
              18,
              19,
            ],
            "text": "=",
            "value": "=",
          },
          "parent": [Circular],
          "position": [
            8,
            23,
          ],
          "predicates": [],
          "remove": [Function],
          "replace": [Function],
          "setOperand": [Function],
          "setOperator": [Function],
          "type": "clause",
        },
        "clauseType": "not",
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "operator": {
          "accept": [Function],
          "enterNode": [Function],
          "exitNode": [Function],
          "getChildren": [Function],
          "parent": [Circular],
          "position": [
            4,
            7,
          ],
          "value": "not",
        },
        "parent": [Circular],
        "position": [
          4,
          23,
        ],
        "remove": [Function],
        "removeClause": [Function],
        "replace": [Function],
        "replaceClause": [Function],
        "type": "clause",
      },
      "clauseType": "not",
      "enterNode": [Function],
      "exitNode": [Function],
      "getChildren": [Function],
      "operator": {
        "accept": [Function],
        "enterNode": [Function],
        "exitNode": [Function],
        "getChildren": [Function],
        "parent": [Circular],
        "position": [
          0,
          3,
        ],
        "value": "not",
      },
      "parent": [Circular],
      "position": [
        0,
        23,
      ],
      "remove": [Function],
      "removeClause": [Function],
      "replace": [Function],
      "replaceClause": [Function],
      "type": "clause",
    },
  },
  "represents": "not not issuetype = bug",
}
`;
